--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.5
   firebase_database: ^10.0.9
+  syncfusion_flutter_gauges: any
 
   
 
@@ -48,6 +49,7 @@ dependencies:
 dev_dependencies:
   change_app_package_name: ^1.1.0
   flutter_launcher_icons: "^0.11.0"
+  flutter_lints: ^2.0.1
 flutter_icons:
  android: "launcher_icon"
  image_path: "assets/icon.png"
@@ -96,6 +98,9 @@ flutter:
      - family: Segoe
        fonts:
          - asset: fonts/Segoe UI.ttf
+     - family: SevenSegment
+       fonts:
+         - asset: fonts/Seven_Segment.ttf
          
   #   - family: Trajan Pro
   #     fonts:
