--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^4.2.5
   firebase_database: ^10.0.9
   syncfusion_flutter_gauges: ^20.4.48
+  connectivity_plus: ^3.0.2
+  internet_connection_checker: ^1.0.0+1
 
   
 
@@ -82,6 +84,7 @@ flutter:
   assets:
    - assets/signinbitmap.png
    - assets/icon.png
+   - assets/wifilost.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
