--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   syncfusion_flutter_gauges: ^20.4.48
   connectivity_plus: ^3.0.2
   internet_connection_checker: ^1.0.0+1
+  animated_splash_screen: ^1.3.0
 
   
 
@@ -85,6 +86,10 @@ flutter:
    - assets/signinbitmap.png
    - assets/icon.png
    - assets/wifilost.png
+   - assets/splash_ico.png
+   - assets/motor_ico.png
+   - assets/comingsoon_ico.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
