--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   connectivity_plus: ^3.0.2
   internet_connection_checker: ^1.0.0+1
   animated_splash_screen: ^1.3.0
+  url_launcher: ^6.1.10
 
   
 
@@ -88,7 +89,11 @@ flutter:
    - assets/wifilost.png
    - assets/splash_ico.png
    - assets/motor_ico.png
-   - assets/comingsoon_ico.png
+   - assets/comingsoon_ico.png 
+   - assets/linkedin_ico.png
+   - assets/github_ico.png
+   - assets/wordpress_ico.png
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
