--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   animated_splash_screen: ^1.3.0
   url_launcher: ^6.1.10
+  awesome_notifications: ^0.7.4+1
 
   
 
